--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,51 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# CS 61A
+.ok*
+*.ok
+ok
+discussions/
+quizzes/
+
+# Visual Studio Code
+.vscode/
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
